src/parser/snapshots/almond__parser__functions__tests__function_declaration.snap
---
source: src/parser/functions.rs
expression: "parse_function_declaration(r#\"function a() {\n                    \"use strict\"\n                    return 1\n                }\"#.into()).unwrap().1"
---
{
  "type": "FunctionDeclaration",
  "id": {
    "type": "Identifier",
    "name": "a",
    "start": 9,
    "end": 10
  },
  "params": [],
  "body": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Literal",
          "value": "use strict",
          "start": 35,
          "end": 47
        },
        "directive": "use strict",
        "start": 35,
        "end": 47
      },
      {
        "type": "ReturnStatement",
        "argument": {
          "type": "Literal",
          "value": 1.0,
          "start": 75,
          "end": 76
        },
        "start": 68,
        "end": 76
      }
    ],
    "start": 13,
    "end": 94
  },
  "async": false,
  "start": 0,
  "end": 94
}
