src/parser/snapshots/almond__parser__functions__tests__nested_function_declaration.snap
---
source: src/parser/functions.rs
expression: "parse_function_declaration(r#\"function a() {\n                    function b() {\n                        a();\n                    }\n                }\"#.into()).unwrap().1"
---
{
  "type": "FunctionDeclaration",
  "id": {
    "type": "Identifier",
    "name": "a",
    "start": 9,
    "end": 10
  },
  "params": [],
  "body": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "FunctionDeclaration",
        "id": {
          "type": "Identifier",
          "name": "b",
          "start": 44,
          "end": 45
        },
        "params": [],
        "body": {
          "type": "BlockStatement",
          "body": [
            {
              "type": "ExpressionStatement",
              "expression": {
                "type": "CallExpression",
                "callee": {
                  "type": "Identifier",
                  "name": "a",
                  "start": 74,
                  "end": 75
                },
                "arguments": [],
                "start": 74,
                "end": 77
              },
              "start": 74,
              "end": 78
            }
          ],
          "start": 48,
          "end": 100
        },
        "async": false,
        "start": 35,
        "end": 100
      }
    ],
    "start": 13,
    "end": 118
  },
  "async": false,
  "start": 0,
  "end": 118
}
